--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 
 
-        <!-- <section class="soundcloud wrapper">
+        <section class="soundcloud wrapper">
 
             <iframe width="100%" height="500" scrolling="no" frameborder="no" allow="autoplay"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/623650572&color=%236493c8&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
@@ -104,7 +104,7 @@
 
         <!-- HIALEAH SECTION -->
 
-        <!-- <section class="soundcloud wrapper">
+        <section class="soundcloud wrapper">
 
             <iframe width="100%" height="600" scrolling="no" frameborder="no" allow="autoplay"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/751181394&color=%236493c8&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
@@ -131,7 +131,7 @@
 
             </section>
 
-        </div> --> -->
+        </div> 
 
         <!-- <section class="bandcampHialeah wrapper">
     
