beginning new artist section

--- a/index.html
+++ b/index.html
@@ -54,102 +54,35 @@
 
     <!-- COLLECTIVE SECTION -->
 
-    <div class="collective" id="collective">
+    <section class="collective wrapper" id="collective">
 
+        <h2 class="collectiveHeadline">collective artists</h2>
 
+            <div class="artistCard1">
 
-            <h2 class="collectiveHeadline">collective artists</h2>
+                <!-- <img src="./assets/GAlogo-01.png" alt=""> -->
 
+            </div>
 
-<!-- PREVIOUS ARTISTS SECTION FOR REFERENCE -->
+                <div class="artistCard2">
 
-        <!-- GOODBYE ARTHROPODS SECTION -->
+                    <!-- <img src="./assets/HialeahLogo.png" alt=""> -->
 
-        <!-- USE SOME CLEARFIX BRUH -->
+                </div>
 
+                    <div class="artistCard3">
 
+                        <!-- <img src="./assets/LippyLogo.png" alt=""> -->
 
+                    </div>
 
-        <section class="soundcloud wrapper">
+            <div class="artistCard4">
 
-            <iframe width="100%" height="500" scrolling="no" frameborder="no" allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/623650572&color=%236493c8&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                <!-- <img src="./assets/NARHlogo.png" alt=""> -->
 
-        </section>
+            </div>
 
-        <div class="bandcampSection wrapper">
-
-            <section class="bandcampLeft">
-
-                <iframe style="border: 0; width: 300px; height: 420px;"
-                    src="https://bandcamp.com/EmbeddedPlayer/album=75300895/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/"
-                    seamless><a href="http://goodbyearthropods.bandcamp.com/album/ron-mexico">Ron Mexico by Goodbye
-                        Arthropods</a></iframe>
-
-            </section>
-
-            <section class="bandcampRight">
-
-                <iframe style="border: 0; width: 300px; height: 420px;"
-                    src="https://bandcamp.com/EmbeddedPlayer/album=3596830157/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/"
-                    seamless><a
-                        href="http://goodbyearthropods.bandcamp.com/album/discount-meat-emotional-knapsack">Discount
-                        Meat &amp;
-                        Emotional Knapsack by Goodbye Arthropods</a></iframe>
-
-            </section>
-
-        </div>
-
-
-        <!-- HIALEAH SECTION -->
-
-        <section class="soundcloud wrapper">
-
-            <iframe width="100%" height="600" scrolling="no" frameborder="no" allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/751181394&color=%236493c8&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-
-        </section>
-
-        <div class="bandcampSection wrapper">
-
-            <section class="bandcampLeft">
-
-                <iframe style="border: 0; width: 300px; height: 420px;"
-                    src="https://bandcamp.com/EmbeddedPlayer/album=3257074663/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/"
-                    seamless><a href="http://hialeah.bandcamp.com/album/secret-beach-ep">Secret Beach EP by h i a l e a
-                        h</a></iframe>
-
-            </section>
-
-            <section class="bandcampRight">
-
-                <iframe style="border: 0; width: 300px; height: 420px;"
-                    src="https://bandcamp.com/EmbeddedPlayer/album=372574088/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/"
-                    seamless><a href="http://hialeah.bandcamp.com/album/elucidate">Elucidate by h i a l e a
-                        h</a></iframe>
-
-            </section>
-
-        </div> 
-
-        <!-- <section class="bandcampHialeah wrapper">
-    
-            <iframe style="border: 0; width: 350px; height: 442px;"
-                src="https://bandcamp.com/EmbeddedPlayer/track=729810262/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/"
-                seamless><a href="http://hialeah.bandcamp.com/track/elucidate">Elucidate by h i a l e a h</a></iframe>
-    
-        </section> -->
-
-    <!-- </div> -->
-
-
-
-
-    <!-- THROW SOME FLICKITY IN HERE BRUHHHHHHH -->
-
-
-
+    </section>
 
 
     <section class="visuals wrapper" id="visuals">
